# layered-architecture-sample

./: README.md  pyproject.toml
app/application/: models.py  ports.py  services.py
app/infrastructure/: s3_repository.py
app/ui/: main.py
app/ui/static/: style.css
app/ui/templates/: index.html
