[project]
name = "layered-architecture-sample"
version = "0.1.0"
description = "FastAPI + Jinja2 chat app with Simple Layered Architecture"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "boto3>=1.34",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
